--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
   text-align: left;
   background-color: #fff;
 }
+.nav-container {
+  max-width: 1140px;
+
+}
 .btn {
   margin: 0;
   font-family: inherit;
