--- a/style.css
+++ b/style.css
@@ -8,9 +8,28 @@ body {
   text-align: left;
   background-color: #fff;
 }
-.nav-container {
-  max-width: 1140px;
-
+.nav.nav-tabs {
+  list-style-type: none;
+  margin: 20px;
+  padding: 0;
+  overflow: hidden;
+  border: 1px solid #e7e7e7;
+  background-color: #f3f3f3;
+}
+.nav.nav-tabs li {
+  float: left;
+}
+.nav.nav-tabs li a {
+  display: block;
+  color: #666;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  cursor: pointer;
+}
+.nav.nav-tabs li a.active {
+  color: white;
+  background-color: #008CBA;
 }
 .btn {
   margin: 0;
@@ -81,7 +100,10 @@ body {
   background-color: #fff;
   border: 1px solid rgba(0,0,0,.125);
 }
-
+.container {
+  position: relative;
+  margin: 20px;
+}
 .action-container {
   position: relative;
   flex: 1 1 auto;
